--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "no-underscore-dangle": "off",
     "no-console": "off",
     "no-useless-return": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "object-curly-newline": "off"
   }
 }
