--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/7Alina77/express-mesto-gha.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alina Potapchuk",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/7Alina77/express-mesto-gha/issues"
