--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,6 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle": "off",
-    "no-console": "off",
-    "no-useless-return": "off",
-    "arrow-parens": "off",
-    "object-curly-newline": "off"
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
